# Connect4Runner

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  SPEC.md  pyrightconfig.json  requirements.txt
engine/: BUILD.bazel  engine_base.py  engine_main.py  game_board.py  random_engine.py
runner/: BUILD.bazel  codec.py  elo_cli.py  engine_container.py  run_one.py  single_runner.py  timer.py
src/: codec.py  engine_runner.py  main.py  protocol_tester.py  runner.py
test/: BUILD.bazel  test_codec.py  test_engine.py
