py_library(
  name = "lib",
  srcs = [
    "src/__init__.py",
    "src/codec.py",
    "src/board.py",
  ],
)

py_binary(
  name = "main",
  srcs = [
    "src/main.py",
  ],
  deps = [
    ":lib"
  ]
)

py_test(
    name = "test_codec",
    srcs = [
        "test/test_codec.py",
    ],
    deps = [
        ":lib",         
    ],
)
