py_library(
    name = "runner",
    srcs = [
        "src/__init__.py",
        "src/board.py",
        "src/codec.py",
        "src/engine_base.py",
        "src/engine_main.py",
        "src/engine_runner.py",
    ],
    visibility = [
        "//visibility:public",
    ],
)

py_binary(
    name = "protocol_tester",
    srcs = [
        "src/protocol_tester.py",
    ],
    deps = [
        ":lib",
    ],
)
