py_library(
    name = "engine",
    srcs = [
        "__init__.py",
        "engine_base.py",
        "engine_main.py",
        "game_board.py",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//runner",
    ],
)

py_binary(
    name = "random_engine",
    srcs = [
        "random_engine.py",
    ],
    deps = [
        ":engine",
        "//runner",
    ],
)
