py_library(
    name = "runner",
    srcs = [
        "__init__.py",
        "codec.py",
        "engine_container.py",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "single_runner",
    srcs = [
        "single_runner.py",
    ],
    deps = [
        ":runner",
        "//engine",
    ],
)
