py_library(
    name = "runner",
    srcs = [
        "__init__.py",
        "codec.py",
        "engine_container.py",
        "run_one.py",
        "timer.py",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "single_runner",
    srcs = [
        "single_runner.py",
    ],
    deps = [
        ":runner",
        "//engine",
    ],
)

py_binary(
    name = "elo_cli",
    srcs = [
        "elo_cli.py",
    ],
    deps = [
        ":runner",
        "//engine",
    ],
)
