py_test(
    name = "test_codec",
    srcs = [
        "test_codec.py",
    ],
    deps = [
        "//runner",         
    ],
    visibility = [
      "//visibility:public"
    ],
)

py_test(
  name = "test_engine",
  srcs = [
    "test_engine.py"
  ],
  deps = [
    "//engine"
  ],
  visibility = [
    "//visibility:public"
  ],
)
