py_test(
    name = "test_codec",
    srcs = [
        "test_codec.py",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//runner",
    ],
)

py_test(
    name = "test_engine",
    srcs = [
        "test_engine.py",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//engine",
    ],
)
